# forem-openapi-client

./: Cargo.toml  Makefile.toml  README.md  generator_config.yaml
.openapi-generator/: FILES
docs/: ApiPagesPostRequest.md  Article.md  ArticleArticle.md  ArticleFlareTag.md  ArticleIndex.md  ArticlesApi.md  Comment.md  CommentsApi.md  DisplayAd.md  DisplayAdsApi.md  FollowedTag.md  FollowedTagsApi.md  FollowersApi.md  GetFollowers200ResponseInner.md  Organization.md  OrganizationsApi.md  Page.md  PagesApi.md  PodcastEpisodeIndex.md  PodcastEpisodesApi.md  ProfileImage.md  ProfileImagesApi.md  ReactionsApi.md  ReadinglistApi.md  SharedOrganization.md  SharedPodcast.md  SharedUser.md  Tag.md  TagsApi.md  User.md  UserInviteParam.md  UsersApi.md  VideoArticle.md  VideoArticleUser.md  VideosApi.md
src/: lib.rs
src/apis/: articles_api.rs  comments_api.rs  configuration.rs  display_ads_api.rs  followed_tags_api.rs  followers_api.rs  mod.rs  organizations_api.rs  pages_api.rs  podcast_episodes_api.rs  profile_images_api.rs  reactions_api.rs  readinglist_api.rs  tags_api.rs  users_api.rs  videos_api.rs
src/models/: _api_pages_post_request.rs  article.rs  article_article.rs  article_flare_tag.rs  article_index.rs  comment.rs  display_ad.rs  followed_tag.rs  get_followers_200_response_inner.rs  mod.rs  organization.rs  page.rs  podcast_episode_index.rs  profile_image.rs  shared_organization.rs  shared_podcast.rs  shared_user.rs  tag.rs  user.rs  user_invite_param.rs  video_article.rs  video_article_user.rs
